--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "sweetalert2": "^11.19.1"
   }
 }
