--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "liveServer.settings.port": 5501,
-    "editor.inlineSuggest.edits.codeShifting": true,
     "editor.quickSuggestionsDelay": 20,
     "workbench.editor.enablePreview": true,
     "editor.acceptSuggestionOnEnter": "on",
-    "editor.inlineSuggest.suppressSuggestions": true
+    "editor.inlineSuggest.suppressSuggestions": true,
+    "editor.inlineSuggest.edits.allowCodeShifting": "always"
 }
