--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "libphonenumber-js": "^1.12.7",
     "lodash": "^4.17.21",
     "mongoos": "^0.0.1-security",
     "mongoose": "^8.13.2",
