--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.0",
