--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.17.1",
+    "puppeteer": "^24.9.0",
     "slugify": "^1.6.6",
     "sweetalert2": "^11.19.1"
   }
