--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.17.1",
     "puppeteer": "^24.9.0",
+    "razorpay": "^2.9.6",
     "slugify": "^1.6.6",
     "sweetalert2": "^11.19.1"
   }
