--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "connect-mongo": "^5.1.0",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
+    "exceljs": "^4.4.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "libphonenumber-js": "^1.12.7",
