--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "puppeteer": "^24.9.0",
     "razorpay": "^2.9.6",
     "slugify": "^1.6.6",
+    "socket.io": "^4.8.1",
     "sweetalert2": "^11.19.1"
   }
 }
