--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-cron": "^4.1.0",
     "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9",
+    "openai": "^5.7.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pdfkit": "^0.17.1",
