--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.21",
     "mongoos": "^0.0.1-security",
     "mongoose": "^8.13.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "node-cron": "^4.1.0",
     "nodemailer": "^6.10.1",
